// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/nvm/extract extractDependencies() returns a result 1`] = `
Array [
  Object {
    "currentValue": "8.4.0",
    "depName": "node",
    "purl": "pkg:github/nodejs/node?sanitize=true",
    "versionScheme": "semver",
  },
]
`;

exports[`lib/manager/nvm/extract extractDependencies() skips non-pinned 1`] = `
Array [
  Object {
    "currentValue": "8.4",
    "depName": "node",
    "purl": "pkg:github/nodejs/node?sanitize=true",
    "skipReason": "unsupported-version",
    "versionScheme": "semver",
  },
]
`;
